09/12/2021 - Robson Vaamonde - Melhorias gerais no PT-BR em vários arquivos Conf e Script, acréscimo da linha de 
verificação da consultado do domínio: dig no script: 03-dns.sh, criação da variável: SECRETUPDATE no arquivos de: 
00-paramentros.sh para facilitar a atualização das chaves de integração do Bind DNS e do ISC DHCP Server, acréscimo
da linha de verificar do Status dos serviços em todos os scripts, criação do Virtual Host do LogAnalyzer, 

06/12/2021 - Robson Vaamonde - Melhoria na documentação do monitoramento de Log's dos serviços de rede utilizando o
script: 00-paramentros.sh, correção do Bug do Log do VSFTPd criando o arquivo no script: 09-vsftp.sh, 

02/12/2021 - Robson Vaamonde - Criação das variáveis do teste do laço de loop das dependências dos script e dos pacotes
de instalação das dependências de cada script no arquivo: 00-parametros.sh, ficando mais simples adicionar novas
dependências na instalação do software.

01/12/2021 - Robson Vaamonde - Customização do script: 16-fusioninventory.sh integrado com o GLPI, atualização das
versões do FusionInventory Server e Agent, atualização da variável $PATHTFTP no script: 06-tftphpa.sh, correção da
linha: ddns-rev-domainname "1.16.172.in-addr.arpa."; no arquivo dhcpd.conf em relação a integração do DHCP e DNS,
melhorias nas configurações do arquivo: named.conf.options em relação aos arquivos de Log do Bind9 DNS.

30/11/2021 - Robson Vaamonde - Melhoria na documentação do arquivo: 00-parametros.sh adicionando as informações dos
arquivos de configuração utilizados em cada script, melhoria na documentação do arquivo de virtual host: glpi.conf, 
atualização da versão do PHP 7.4 no arquivo de agendamento: glpi.cron, retirado do script: 15-glpi.sh as dependências
do PHP: php-recode php-xsl php-gettext php-iconv (analisando se essas dependências vai afetar diretamente o GLPI),
adicionado no script: 05-ntp.sh a edição do arquivo de configuração: dhcpd.conf, criação da bloco de verificação If