@@ -628,7 +628,7 @@ DEPLOYINSTALL="libfile-copy-recursive-perl libparallel-forkmanager-perl"
 WAKEINSTALL="libwrite-net-perl"
 #
 # Variável de instalação das dependências do FusionInventory SNMPv3
-SNMPNSTALL="libdigest-hmac-perl"
+SNMPINSTALL="libdigest-hmac-perl"
 #
 #=============================================================================================
 #                       VARIÁVEIS UTILIZADAS NO SCRIPT: 17-zoneminder.sh                     #
@@ -662,4 +662,30 @@ FLUSH_ZONEMINDER="FLUSH PRIVILEGES;"
 # Variável das dependências do laço de loop do ZoneMinder
 ZONEMINDERDEP="apache2 mysql-server mysql-common software-properties-common php bind9"
 #
-
+#
+#=============================================================================================
+#                       VARIÁVEIS UTILIZADAS NO SCRIPT: 18-guacamole.sh                      #
+#=============================================================================================
+#
+# Arquivos de configuração (conf) do sistema Guacamole utilizados nesse script
+# 01. 
+#
+# Declarando as variáveis utilizadas nas configurações do sistema de acesso remoto Guacamole
+#
+# Variável de download do Apache Guacamole (Links atualizados no dia 09/12/2021)
+GUACAMOLESERVER="https://apachemirror.wuchna.com/guacamole/1.3.0/source/guacamole-server-1.3.0.tar.gz"
+GUACAMOLECLIENT="https://apachemirror.wuchna.com/guacamole/1.3.0/binary/guacamole-1.3.0.war"
+#
+# Localização padrão do diretório de configuração e do webapp do Tomcat9 
+PATHTOMCAT9="/usr/share/tomcat9/"
+PATHWEBAPPS="/var/lib/tomcat9/webapps/"
+#
+# Variável das dependências do laço de loop do Guacamole
+GUACAMOLERDEP="tomcat9 tomcat9-admin tomcat9-user bind9"
+#
+# Variável de instalação das dependências do Guacamole (\ quebra de linha no apt)
+GUACAMOLEINSTALL="libcairo2-dev libjpeg-turbo8-dev libpng-dev libtool-bin libossp-uuid-dev \
+libavcodec-dev libavformat-dev libavutil-dev libswscale-dev freerdp2-dev libpango1.0-dev \
+libssh2-1-dev libtelnet-dev libvncserver-dev libwebsockets-dev libpulse-dev libssl-dev \
+libvorbis-dev libwebp-dev gcc-6 g++-6 make libfreerdp-dev freerdp2-x11 libguac-client-rdp0"
+#
