@@ -4,17 +4,20 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 04/01/2021
-# Data de atualização: 05/01/2021
-# Versão: 0.03
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel = 4.15.x
-# Testado e homologado para a versão do Apache Guacamole 1.3.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 03/12/2021
+# Data de atualização: 09/12/2021
+# Versão: 0.3
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Apache Guacamole Server 1.3.x e Cliente 1.3.x
+#
 # comando para a geração da senha: echo -n guacadmin | openssl md5 | cut -d ' ' -f2
 # comando para a geração da senha: printf '%s' guacadmin | md5sum | cut -d ' ' -f1
 -->
 <user-mapping>
-    <authorize 
+    <!-- configuração do usuário padrão do Guacamole-->
+	<authorize 
             username="guacadmin"
             password="5cbd438413e8e3ca0e14e200fde621a9"
             encoding="md5">
